{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 31,
  "lineage": "e4b4ede6-85da-4ce6-648c-eeb094b3f03a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:623364425356:internet-gateway/igw-06298af634383df05",
            "id": "igw-06298af634383df05",
            "owner_id": "623364425356",
            "tags": {
              "Name": "fc-igw"
            },
            "tags_all": {
              "Name": "fc-igw"
            },
            "vpc_id": "vpc-02b92c6f4896dec31"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:623364425356:route-table/rtb-05b92aa7afb08926c",
            "id": "rtb-05b92aa7afb08926c",
            "owner_id": "623364425356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06298af634383df05",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fc-rtb"
            },
            "tags_all": {
              "Name": "fc-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b92c6f4896dec31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00144f1d85b243dfb",
            "route_table_id": "rtb-05b92aa7afb08926c",
            "subnet_id": "subnet-0c21c4d6e99194236"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072759b2553185840",
            "route_table_id": "rtb-05b92aa7afb08926c",
            "subnet_id": "subnet-0ea1a808f87d0cde8"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:623364425356:security-group/sg-0095b1c9fb7ecd373",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0095b1c9fb7ecd373",
            "ingress": [],
            "name": "terraform-20250123134604453800000001",
            "name_prefix": "terraform-",
            "owner_id": "623364425356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fc-sg"
            },
            "tags_all": {
              "Name": "fc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b92c6f4896dec31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:623364425356:subnet/subnet-0c21c4d6e99194236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c21c4d6e99194236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "623364425356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fc-subnet-0"
            },
            "tags_all": {
              "Name": "fc-subnet-0"
            },
            "vpc_id": "vpc-02b92c6f4896dec31"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:623364425356:subnet/subnet-0ea1a808f87d0cde8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea1a808f87d0cde8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "623364425356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fc-subnet-1"
            },
            "tags_all": {
              "Name": "fc-subnet-1"
            },
            "vpc_id": "vpc-02b92c6f4896dec31"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:623364425356:vpc/vpc-02b92c6f4896dec31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064408f1553b143f1",
            "default_route_table_id": "rtb-071f0000228554c7a",
            "default_security_group_id": "sg-0d6ca393fd4235a89",
            "dhcp_options_id": "dopt-0451c41280eac6693",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b92c6f4896dec31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071f0000228554c7a",
            "owner_id": "623364425356",
            "tags": {
              "Name": "fc-vpc"
            },
            "tags_all": {
              "Name": "fc-vpc"
            }
          }
        }
      ]
    }
  ]
}